Issue tracker with tests